examples/bad/syntax4.swifty
//function with struct as argument
func foo(x:struct) {
   print  x
}
